--- a/coffee/src/main/resources/templates/xdm/infra/CodeForm.html
+++ b/coffee/src/main/resources/templates/xdm/infra/CodeForm.html
@@ -89,62 +89,15 @@
 						<li class="sidebar-dropdown">
 							<a href="#">
 								<i class="bi bi-house"></i>
-								<span class="menu-text">Dashboards</span>
+								<span class="menu-text">코드/코드그룹</span>
 							</a>
 							<div class="sidebar-submenu">
 								<ul>
 									<li>
-										<a href="index.html">Sales</a>
+										<a th:href="@{/CodeXdmList}">코드관리</a>
 									</li>
 									<li>
-										<a href="ecommerce.html">eCommerce</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li class="sidebar-dropdown">
-							<a href="#">
-								<i class="bi bi-handbag"></i>
-								<span class="menu-text">Product</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a href="orders.html">Order History</a>
-									</li>
-									<li>
-										<a href="products.html">Products</a>
-									</li>
-									<li>
-										<a href="view-cart.html">Shopping Cart</a>
-									</li>
-									<li>
-										<a href="checkout.html">Billing Details</a>
-									</li>
-									<li>
-										<a href="customers.html">Customers</a>
-									</li>
-									<li>
-										<a href="add-product.html">Add Product</a>
-									</li>
-									<li>
-										<a href="reviews.html">Reviews</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li class="sidebar-dropdown">
-							<a href="#">
-								<i class="bi bi-gem"></i>
-								<span class="menu-text">Widgets</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a href="widgets.html">Widgets</a>
-									</li>
-									<li>
-										<a href="graph-widgets.html">Graph Widgets</a>
+										<a th:href="@{/CodeGroupXdmList}">코드그룹 관리</a>
 									</li>
 								</ul>
 							</div>
@@ -152,262 +105,28 @@
 						<li class="sidebar-dropdown">
 							<a href="#">
 								<i class="bi bi-collection"></i>
-								<span class="menu-text">UI Elements</span>
+								<span class="menu-text">회원관리</span>
 							</a>
 							<div class="sidebar-submenu">
 								<ul>
 									<li>
-										<a href="accordions.html">Accordions</a>
-									</li>
-									<li>
-										<a href="alerts.html">Alerts</a>
-									</li>
-									<li>
-										<a href="buttons.html">Buttons</a>
-									</li>
-									<li>
-										<a href="badges.html">Badges</a>
-									</li>
-									<li>
-										<a href="cards.html">Cards</a>
-									</li>
-									<li>
-										<a href="carousel.html">Carousel</a>
-									</li>
-									<li>
-										<a href="dropdowns.html">Dropdowns</a>
-									</li>
-									<li>
-										<a href="icons.html">Icons</a>
-									</li>
-									<li>
-										<a href="modals.html">Modals</a>
-									</li>
-									<li>
-										<a href="offcanvas.html">Off Canvas</a>
-									</li>
-									<li>
-										<a href="progress.html">Progress Bars</a>
-									</li>
-									<li>
-										<a href="spinners.html">Spinners</a>
-									</li>
-									<li>
-										<a href="tabs.html">Tabs</a>
-									</li>
-									<li>
-										<a href="tooltips.html">Tooltips</a>
-									</li>
-									<li>
-										<a href="typography.html">Typography</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li class="sidebar-dropdown active">
-							<a href="#">
-								<i class="bi bi-stickies"></i>
-								<span class="menu-text">Pages</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a href="create-invoice.html">Create Invoice</a>
-									</li>
-									<li>
-										<a href="view-invoice.html">View Invoice</a>
-									</li>
-									<li>
-										<a href="invoice-list.html">Invoice List</a>
-									</li>
-									<li>
-										<a href="subscribers.html">Subscribers</a>
-									</li>
-									<li>
-										<a href="contacts.html">Contacts</a>
-									</li>
-									<li>
-										<a href="pricing.html">Pricing</a>
-									</li>
-									<li>
-										<a href="profile.html">Profile</a>
-									</li>
-									<li>
-										<a href="account-settings.html" class="current-page">Account Settings</a>
+										<a th:href="@{/MemberXdmList}">멤버관리</a>
 									</li>
 								</ul>
 							</div>
 						</li>
 						<li class="sidebar-dropdown">
 							<a href="#">
-								<i class="bi bi-calendar4"></i>
-								<span class="menu-text">Calendars</span>
+								<i class="bi bi-handbag"></i>
+								<span class="menu-text">제품관리</span>
 							</a>
 							<div class="sidebar-submenu">
 								<ul>
 									<li>
-										<a href="calendar.html">Daygrid View</a>
-									</li>
-									<li>
-										<a href="calendar-external-draggable.html">External Draggable</a>
-									</li>
-									<li>
-										<a href="calendar-google.html">Google Calendar</a>
-									</li>
-									<li>
-										<a href="calendar-list-view.html">List View</a>
-									</li>
-									<li>
-										<a href="calendar-selectable.html">Selectable</a>
+										<a th:href="@{/ProductXdmList}">제품관리</a>
 									</li>
 								</ul>
 							</div>
-						</li>
-						<li class="sidebar-dropdown">
-							<a href="#">
-								<i class="bi bi-columns-gap"></i>
-								<span class="menu-text">Forms</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a href="form-inputs.html">Form Inputs</a>
-									</li>
-									<li>
-										<a href="form-checkbox-radio.html">Checkbox &amp; Radio</a>
-									</li>
-									<li>
-										<a href="form-file-input.html">File Input</a>
-									</li>
-									<li>
-										<a href="form-validations.html">Validations</a>
-									</li>
-									<li>
-										<a href="bs-select.html">Bootstrap Select</a>
-									</li>
-									<li>
-										<a href="date-time-pickers.html">Date Time Pickers</a>
-									</li>
-									<li>
-										<a href="input-mask.html">Input Masks</a>
-									</li>
-									<li>
-										<a href="summernote.html">Summernote</a>
-									</li>
-									<li>
-										<a href="form-layout1.html">Form Layout</a>
-									</li>
-									<li>
-										<a href="form-layout2.html">Form Layout 2</a>
-									</li>
-									<li>
-										<a href="form-layout3.html">Form Layout 3</a>
-									</li>
-									<li>
-										<a href="form-layout4.html">Form Layout Horizontal</a>
-									</li>
-									<li>
-										<a href="form-layout5.html">Form Layout Tabs</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li class="sidebar-dropdown">
-							<a href="#">
-								<i class="bi bi-window-split"></i>
-								<span class="menu-text">Tables</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a href="tables.html">Tables</a>
-									</li>
-									<li>
-										<a href="data-tables.html">Data Tables</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li class="sidebar-dropdown">
-							<a href="#">
-								<i class="bi bi-pie-chart"></i>
-								<span class="menu-text">Graphs &amp; Maps</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a href="apex.html">Apex</a>
-									</li>
-									<li>
-										<a href="morris.html">Morris</a>
-									</li>
-									<li>
-										<a href="maps.html">Maps</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li class="sidebar-dropdown">
-							<a href="#">
-								<i class="bi bi-layout-sidebar"></i>
-								<span class="menu-text">Layouts</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a href="layout.html">Default Layout</a>
-									</li>
-									<li>
-										<a href="layout-grid.html">Grid Layout</a>
-									</li>
-									<li>
-										<a href="layout-mega-menu.html">Mega Menu</a>
-									</li>
-									<li>
-										<a href="layout-full-screen.html">Full Screen</a>
-									</li>
-									<li>
-										<a href="layout-toggle-screen.html">Toggle Screen</a>
-									</li>
-									<li>
-										<a href="layout-welcome.html">Welcome Layout</a>
-									</li>
-									<li>
-										<a href="layout-dark-sidebar.html">Dark Sidebar</a>
-									</li>
-									<li>
-										<a href="layout-logo-large.html">Full Logo</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li class="sidebar-dropdown">
-							<a href="#">
-								<i class="bi bi-x-diamond"></i>
-								<span class="menu-text">Authentication</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a href="login.html">Login</a>
-									</li>
-									<li>
-										<a href="signup.html">Signup</a>
-									</li>
-									<li>
-										<a href="error.html">Error</a>
-									</li>
-									<li>
-										<a href="maintenance.html">Maintenance</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li>
-							<a href="starter-page.html">
-								<i class="bi bi-hand-index-thumb"></i>
-								<span class="menu-text">Link</span>
-							</a>
 						</li>
 					</ul>
 				</div>
@@ -537,18 +256,24 @@
 								</div>
 											<div class="row">
 													<div class="col-6">
-														<label class="form-label">seq</label>
-														<input type="text" name="seq" class="form-control" th:value="${item.seq}">
+														<label for="seq" class="form-label">seq</label>
+														<input type="text" id="seq" name="seq" class="form-control" th:value="${item.seq}">
 													</div>
 													<div class="col-6">
-														<label class="form-label">코드그룹 시퀀스</label>
-														<input type="text" name="codeGroup_seq" class="form-control" th:value="${item.codeGroup_seq}">
+														<label for="codeGroup_seq" class="form-label">코드그룹 시퀀스</label>
+														<input type="text" id="codeGroup_seq" name="codeGroup_seq" class="form-control" th:value="${item.codeGroup_seq}">
+														<div class="invalid-feedback">
+													  			코드그룹 시퀀스를 입력하세요
+													  	</div>
 													</div>
 											</div>
 											<div class="row mt-3">
 													<div class="col-6">
-														<label class="form-label">이름</label>
-														<input type="text" name="name" class="form-control" th:value="${item.name}">
+														<label for="name" class="form-label">이름</label>
+														<input type="text" id="name" name="name" class="form-control" th:value="${item.name}">
+														<div class="invalid-feedback">
+													  			코드그룹 이름을 입력하세요
+													  	</div>
 													</div>
 													<div class="col-6">
 														<label class="form-label">메모</label>
@@ -563,7 +288,7 @@
 												</div>
 												<div class="">
 													<button type="submit" class="btn btn-info" formaction="/CodeUelete">Uelete</button>
-													<button type="submit" class="btn btn-info" formaction="/CodeUpdate">수정</button>
+													<button type="submit" id="btnSubmit" class="btn btn-info" formaction="/CodeUpdate">수정</button>
 													<button type="submit" id="delete" class="btn btn-info" formaction="/CodeDelete">삭제</button>
 												</div>
 											</div>
@@ -591,6 +316,43 @@
 												}, false)
 											})
 									})()
+									
+															//자바스크립트 버튼
+	document.getElementById("btnSubmit").onclick = function() {
+	
+	if(validationInst() == false)return false;
+	}
+	
+	function validationInst() {
+		if(validationUpdt() == false) {
+			return false;
+			} else {
+				form.action = goUrlXdmList;
+				form.submit();
+			}
+	}
+	
+	function validationUpdt(){
+		if(!nullToEmpty(document.getElementById("name").value)) {
+			
+			document.getElementById("name").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("codeGroup_seq").value)) {
+			
+			document.getElementById("codeGroup_seq").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+	}
+	nullToEmpty = function(value){
+		if(value == null || value == 'null' || value.length == 0){
+			return false;
+		} else{
+			return true;
+		}
+	}
 								</script>
 							</div>
 						</div>
