--- a/coffee/src/main/resources/templates/xdm/infra/CodeGroupForm.html
+++ b/coffee/src/main/resources/templates/xdm/infra/CodeGroupForm.html
@@ -537,12 +537,15 @@
 								</div>
 											<div class="row">
 													<div class="col-6">
-														<label class="form-label">seq</label>
-														<input type="text" name="seq" class="form-control" th:value="${item.seq}">
+														<label for="seq" class="form-label">seq</label>
+														<input type="text" id="seq" name="seq" class="form-control" th:value="${item.seq}">
 													</div>
 													<div class="col-6">
-														<label class="form-label">이름</label>
-														<input type="text" name="name" class="form-control" th:value="${item.name}">
+														<label for="name" class="form-label">코드이름</label>
+														<input type="text" id="name" name="name" class="form-control" th:value="${item.name}">
+														<div class="invalid-feedback">
+													  			코드이름을 입력하세요
+													  	</div>
 													</div>
 											</div>
 											<div class="row mt-3">
@@ -559,7 +562,7 @@
 												</div>
 												<div class="">
 													<button type="submit" class="btn btn-info" formaction="/codeGroupUelete">Uelete</button>
-													<button type="submit" class="btn btn-info" formaction="/codeGroupUpdate">수정</button>
+													<button type="submit" id="btnSubmit" class="btn btn-info" formaction="/codeGroupUpdate">수정</button>
 													<button type="submit" id="delete" class="btn btn-info" formaction="/codeGroupDelete">삭제</button>
 												</div>
 											</div>
@@ -587,6 +590,36 @@
 												}, false)
 											})
 									})()
+									
+									document.getElementById("btnSubmit").onclick = function() {
+	
+	if(validationInst() == false)return false;
+	}
+	
+	function validationInst() {
+		if(validationUpdt() == false) {
+			return false;
+			} else {
+				form.action = goUrlXdmList;
+				form.submit();
+			}
+	}
+	
+	function validationUpdt(){
+		if(!nullToEmpty(document.getElementById("name").value)) {
+			
+			document.getElementById("name").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+	}
+	nullToEmpty = function(value){
+		if(value == null || value == 'null' || value.length == 0){
+			return false;
+		} else{
+			return true;
+		}
+	}
 								</script>
 							</div>
 						</div>
