--- a/coffee/src/main/resources/templates/xdm/infra/MemberXdmForm.html
+++ b/coffee/src/main/resources/templates/xdm/infra/MemberXdmForm.html
@@ -532,44 +532,69 @@
 							<div class="container-fluid">
 								<div class="row">
 									<div class="col mb-3">
-										<div class="card-title">코드 관리</div>
+										<div class="card-title">멤버 관리</div>
 									</div>
 								</div>
 								
 											<div class="row">
-													<div class="col-6">
-														<label class="form-label">이름</label>
-														<input type="text" name="memberName" class="form-control" th:value="${item.memberName}">
-													</div>
-													<div class="col-6">
-														<label class="form-label">성별</label>
-														<input type="text" name="genderCd" class="form-control" th:value="${item.genderCd}">
-													</div>
-											</div>
-											<div class="row mt-3">
-													<div class="col-6">
-														<label class="form-label">비밀번호</label>
-														<input type="text" name="memberPwd" class="form-control" th:value="${item.memberPwd}">
-													</div>
-													<div class="col-6">
-														<label class="form-label">아이디</label>
-														<input type="text" name="genderCd" class="form-control" th:value="${item.memberId}">
-													</div>
-											</div>
-											<div class="row">
 												<div class="col-6">
-														<label class="form-label">이메일</label>
-														<input type="text" name="memberEmail" class="form-control" th:value="${item.memberEmail}">
-													</div>
-													<div class="col-6">
-														<label class="form-label">생년월일</label>
-														<input type="text" name="birthDay" class="form-control" th:value="${item.birthDay}">
-													</div>
-											</div>
-											<div class="row">
+													<label for="memberName" class="form-label">이름</label>
+													<input type="text" id="memberName" name="memberName" class="form-control" th:value="${item.memberName}" required>
+													<div class="invalid-feedback">
+												  			이름을 입력하세요
+												  	</div>
+												</div>
 												<div class="col-6">
-														<label class="form-label">전화번호</label>
-														<input type="text" name="phoneNumber" class="form-control" th:value="${item.phoneNumber}">
+													<label for="genderCd" class="form-label">성별</label>
+													<input type="text" id="genderCd" name="genderCd" class="form-control" th:value="${item.genderCd}" required>
+													<div class="invalid-feedback">
+												  			성별을 입력하세요
+												 	</div>
+												</div>
+											</div>
+											<div class="row mt-4">
+												<div class="col-6">
+													<label for="memberId" class="form-label">아이디</label>
+													<input type="text" id="memberId" name="memberId" class="form-control" th:value="${item.memberId}" required>
+													<div class="invalid-feedback">
+												  			아이디를 입력하세요
+												  	</div>
+												</div>
+												<div class="col-6">
+													<label for="memberPwd" class="form-label">비밀번호</label>
+													<input type="text" id="memberPwd" name="memberPwd" class="form-control" th:value="${item.memberPwd}" required>
+													<div class="invalid-feedback">
+												  			비밀번호를 입력하세요
+												  	</div>
+												</div>
+											</div>
+											<div class="row mt-4">
+												<div class="col-6">
+													<label for="memberEmail" class="form-label">이메일</label>
+													<input type="text" id="memberEmail" name="memberEmail" class="form-control" th:value="${item.memberEmail}" required>
+													<div class="invalid-feedback">
+												  			이메일을 입력하세요
+												  	</div>
+												</div>
+												<div class="col-6">
+													<label for="birthDay" class="form-label">생년월일</label>
+													<input type="text" id="birthDay" name="birthDay" class="form-control" th:value="${item.birthDay}" required>
+													<div class="invalid-feedback">
+												  			생년월일을 입력하세요
+												  	</div>
+												</div>
+											</div>
+											<div class="row mt-4">
+												<div class="col-6">
+													<label for="phoneNumber" class="form-label">전화번호</label>
+													<input type="text" id="phoneNumber" name="phoneNumber" class="form-control" th:value="${item.phoneNumber}" required>
+													<div class="invalid-feedback">
+												  			전화번호를 입력하세요
+												  	</div>
+												</div>
+													<div class="col-6">
+														<label class="form-label">seq</label>
+														<input type="text" name="seq" class="form-control" th:value="${item.seq}">
 													</div>
 											</div>
 											
@@ -580,7 +605,7 @@
 												</div>
 												<div class="">
 													<button type="submit" class="btn btn-info" formaction="/MemberUelete">Uelete</button>
-													<button type="submit" class="btn btn-info" formaction="/MemberUpdate">수정</button>
+													<button type="submit" id="btnSubmit" class="btn btn-info" formaction="/MemberUpdate">수정</button>
 													<button type="submit" id="delete" class="btn btn-info" formaction="/MemberDelete">삭제</button>
 												</div>
 											</div>
@@ -608,6 +633,74 @@
 												}, false)
 											})
 									})()
+									
+									document.getElementById("btnSubmit").onclick = function() {
+	
+	if(validationInst() == false)return false;
+	}
+	
+	function validationInst() {
+		if(validationUpdt() == false) {
+			return false;
+			} else {
+				form.action = goUrlXdmList;
+				form.submit();
+			}
+	}
+	
+	function validationUpdt(){
+		if(!nullToEmpty(document.getElementById("memberName").value)) {
+			
+			document.getElementById("memberName").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("genderCd").value)) {
+			
+			document.getElementById("genderCd").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("memberId").value)) {
+			
+			document.getElementById("memberId").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("memberPwd").value)) {
+			
+			document.getElementById("memberPwd").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("memberEmail").value)) {
+			
+			document.getElementById("memberEmail").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("birthDay").value)) {
+			
+			document.getElementById("birthDay").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("phoneNumber").value)) {
+			
+			document.getElementById("phoneNumber").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		
+	}
+	nullToEmpty = function(value){
+		if(value == null || value == 'null' || value.length == 0){
+			return false;
+		} else{
+			return true;
+		}
+	}
+					
 								</script>
 							</div>
 						</div>
