--- a/coffee/src/main/resources/templates/xdm/infra/MemberXdmReg.html
+++ b/coffee/src/main/resources/templates/xdm/infra/MemberXdmReg.html
@@ -538,49 +538,58 @@
 									</div>
 									<div class="row mt-4">
 										<div class="col-6">
-											<label for="validationCustom01" class="form-label">이름</label>
-											<input type="text" id="memberName" name="memberName" class="form-control">
+											<label for="memberName" class="form-label">이름</label>
+											<input type="text" id="memberName" name="memberName" class="form-control" required>
 											<div class="invalid-feedback">
 										  			이름을 입력하세요
 										  	</div>
 										</div>
 										<div class="col-6">
-											<label for="validationCustom01" class="form-label">성별</label>
-											<input type="text" id="genderCd" name="genderCd" class="form-control">
+											<label for="genderCd" class="form-label">성별</label>
+											<input type="text" id="genderCd" name="genderCd" class="form-control" required>
+											<div class="invalid-feedback">
+										  			성별을 입력하세요
+										  	</div>
 										</div>
 									</div>
 									<div class="row mt-4">
 										<div class="col-6">
-											<label for="validationCustom01" class="form-label">아이디</label>
-											<input type="text" id="memberId" name="memberId" class="form-control">
+											<label for="memberId" class="form-label">아이디</label>
+											<input type="text" id="memberId" name="memberId" class="form-control" required>
 											<div class="invalid-feedback">
-										  			이름을 입력하세요
+										  			아이디를 입력하세요
 										  	</div>
 										</div>
 										<div class="col-6">
-											<label for="validationCustom01" class="form-label">비밀번호</label>
-											<input type="text" id="memberPwd" name="memberPwd" class="form-control">
+											<label for="memberPwd" class="form-label">비밀번호</label>
+											<input type="text" id="memberPwd" name="memberPwd" class="form-control" required>
+											<div class="invalid-feedback">
+										  			비밀번호를 입력하세요
+										  	</div>
 										</div>
 									</div>
 									<div class="row mt-4">
 										<div class="col-6">
-											<label for="validationCustom01" class="form-label">이메일</label>
-											<input type="text" id="memberEmail" name="memberEmail" class="form-control">
+											<label for="memberEmail" class="form-label">이메일</label>
+											<input type="text" id="memberEmail" name="memberEmail" class="form-control" required>
 											<div class="invalid-feedback">
-										  			이름을 입력하세요
+										  			이메일을 입력하세요
 										  	</div>
 										</div>
 										<div class="col-6">
-											<label for="validationCustom01" class="form-label">생년월일</label>
-											<input type="text" id="birthDay" name="birthDay" class="form-control">
+											<label for="birthDay" class="form-label">생년월일</label>
+											<input type="text" id="birthDay" name="birthDay" class="form-control" required>
+											<div class="invalid-feedback">
+										  			생년월일을 입력하세요
+										  	</div>
 										</div>
 									</div>
 									<div class="row mt-4">
 										<div class="col-6">
-											<label for="validationCustom01" class="form-label">전화번호</label>
-											<input type="text" id="phoneNumber" name="phoneNumber" class="form-control">
+											<label for="phoneNumber" class="form-label">전화번호</label>
+											<input type="text" id="phoneNumber" name="phoneNumber" class="form-control" required>
 											<div class="invalid-feedback">
-										  			이름을 입력하세요
+										  			전화번호를 입력하세요
 										  	</div>
 										</div>
 									</div>
@@ -638,9 +647,39 @@
 	//}					
 	
 	function validationUpdt(){
-		if(!nullToEmpty(document.getElementById("name").value)) {
+		if(!nullToEmpty(document.getElementById("memberName").value)) {
 			
-			document.getElementById("name").setAttribute("class", "form-control is-invalid");
+			document.getElementById("memberName").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("genderCd").value)) {
+			
+			document.getElementById("genderCd").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("memberId").value)) {
+			
+			document.getElementById("memberId").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("memberPwd").value)) {
+			
+			document.getElementById("memberPwd").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("memberEmail").value)) {
+			
+			document.getElementById("memberEmail").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("birthDay").value)) {
+			
+			document.getElementById("birthDay").setAttribute("class", "form-control is-invalid");
 			return false;
 			
 		}
