--- a/coffee/src/main/resources/templates/xdm/infra/ProductXdmReg.html
+++ b/coffee/src/main/resources/templates/xdm/infra/ProductXdmReg.html
@@ -528,39 +528,82 @@
 						<div class="card-body">
 
 							<!-- 컨테이너 시작 -->
-							<form method="post" action="CodeInsert">
+							<form method="post" action="ProductInsert">
 								<div class="container-fluid">
 									<div class="row">
 										<div class="col mb-3">
-											<div class="card-title">코드 관리</div>
+											<div class="card-title">제품 관리</div>
 										</div>
 
 									</div>
 									<div class="row mt-4">
 										<div class="col-6">
-											<label for="name" class="form-label">이름</label>
-											<input type="text" id="name" name="name" class="form-control" required>
+											<label for="productName" class="form-label">제품이름</label>
+											<input type="text" id="productName" name="productName" class="form-control">
 											<div class="invalid-feedback">
-										  			이름을 입력하세요
+										  			제품이름을 입력하세요
 										  	</div>
 										</div>
 										<div class="col-6">
-											<label for="memo" class="form-label">메모</label>
-											<input type="text" id="memo" name="memo" class="form-control" >
+											<label for="productPrice" class="form-label">제품정가</label>
+											<input type="text" id="productPrice" name="productPrice" class="form-control">
+											<div class="invalid-feedback">
+										  			제품정가를 입력하세요
+										  	</div>
 										</div>
 									</div>
 									<div class="row mt-4">
 										<div class="col-6">
-											<label for="codeGroup_seq" class="form-label">코드그룹 시퀀스</label>
-											<input type="text" id="codeGroup_seq" name="codeGroup_seq" class="form-control" required>
+											<label for="productSalePrice" class="form-label">제품할인가</label>
+											<input type="text" id="productSalePrice" name="productSalePrice" class="form-control">
 											<div class="invalid-feedback">
-										  			코드그룹 시퀀스를 입력하세요
+										  			제품할인가를 입력하세요
+										  	</div>
+										</div>
+										<div class="col-6">
+											<label for="productHotCd" class="form-label">제품Hot</label>
+											<input type="text" id="productHotCd" name="productHotCd" class="form-control">
+											<div class="invalid-feedback">
+										  			제품Hot을 입력하세요
 										  	</div>
 										</div>
 									</div>
+									<div class="row mt-4">
+										<div class="col-6">
+											<label for="productGenderCd" class="form-label">제품성별</label>
+											<input type="text" id="productGenderCd" name="productGenderCd" class="form-control">
+											<div class="invalid-feedback">
+										  			제품성별을 입력하세요
+										  	</div>
+										</div>
+										<div class="col-6">
+											<label for="productSeasonCd" class="form-label">제품계절</label>
+											<input type="text" id="productSeasonCd" name="productSeasonCd" class="form-control">
+											<div class="invalid-feedback">
+										  			제품계절을 입력하세요
+										  	</div>
+										</div>
+									</div>
+									<div class="row mt-4">
+										<div class="col-6">
+											<label for="productColorCd" class="form-label">제품색상</label>
+											<input type="text" id="productColorCd" name="productColorCd" class="form-control">
+											<div class="invalid-feedback">
+										  			제품색상을 입력하세요
+										  	</div>
+										</div>
+										<div class="col-6">
+											<label for="productSizeCd" class="form-label">제품사이즈</label>
+											<input type="text" id="productSizeCd" name="productSizeCd" class="form-control">
+											<div class="invalid-feedback">
+										  			제품사이즈를 입력하세요
+										  	</div>
+										</div>
+									</div>
+									
 									<div class="d-flex justify-content-between mt-4">
 										<div class="">
-											<button type="submit" class="btn btn-info" onclick="javascript: form.action='CodeXdmList';">back</button>       <!--질문 위에 인서트가 있는데 온클릭을 했을때 되는 이-->
+											<button type="submit" class="btn btn-info" onclick="javascript: form.action='ProductXdmList';">back</button>       <!--질문 위에 인서트가 있는데 온클릭을 했을때 되는 이-->
 										</div>
 										<div class="">
 											<button type="submit" id="btnSubmit" class="btn btn-info">save</button>
@@ -610,24 +653,56 @@
 	//	alert("name: " + document.getElementById("name").value)
 	//}					
 	
-	// 유효성 검사 여러개는 getElementsByClassName로 사용해서 클래스를 받아와야 한
-	
 	function validationUpdt(){
-		if(!nullToEmpty(document.getElementById("name").value)) {
+		if(!nullToEmpty(document.getElementById("productName").value)) {
 			
-			document.getElementById("name").setAttribute("class", "form-control is-invalid");
+			document.getElementById("productName").setAttribute("class", "form-control is-invalid");
 			return false;
 			
 		}
-		if(!nullToEmpty(document.getElementById("codeGroup_seq").value)) {
+		if(!nullToEmpty(document.getElementById("productPrice").value)) {
 			
-			document.getElementById("codeGroup_seq").setAttribute("class", "form-control is-invalid");
+			document.getElementById("productPrice").setAttribute("class", "form-control is-invalid");
 			return false;
 			
 		}
-		
+		if(!nullToEmpty(document.getElementById("productSalePrice").value)) {
+			
+			document.getElementById("productSalePrice").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("productHotCd").value)) {
+			
+			document.getElementById("productHotCd").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("productGenderCd").value)) {
+			
+			document.getElementById("productGenderCd").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("productSeasonCd").value)) {
+			
+			document.getElementById("productSeasonCd").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("productColorCd").value)) {
+			
+			document.getElementById("productColorCd").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
+		if(!nullToEmpty(document.getElementById("productSizeCd").value)) {
+			
+			document.getElementById("productSizeCd").setAttribute("class", "form-control is-invalid");
+			return false;
+			
+		}
 	}
-	
 	nullToEmpty = function(value){
 		if(value == null || value == 'null' || value.length == 0){
 			return false;
