--- a/coffee/src/main/resources/templates/xdm/infra/ProductXdmList.html
+++ b/coffee/src/main/resources/templates/xdm/infra/ProductXdmList.html
@@ -291,8 +291,8 @@
 											<div class="col-3">
 												<select id="shOption" name="shOption" class="form-select form-select-sm">
 													<option value="" th:selected="${vo.shOption == null}">검색구분</option>
-													<option value="1" th:selected="${vo.shOption == 1}">코드그룹 seq</option>
-													<option value="2" th:selected="${vo.shOption == 2}">코드그룹 name</option>
+													<option value="1" th:selected="${vo.shOption == 1}">제품 seq</option>
+													<option value="2" th:selected="${vo.shOption == 2}">제품 name</option>
 												</select>
 											</div>  
 											<div class="col-3">
