--- a/coffee/src/main/resources/templates/xdm/infra/CodeGroupForm.html
+++ b/coffee/src/main/resources/templates/xdm/infra/CodeGroupForm.html
@@ -537,12 +537,12 @@
 								</div>
 											<div class="row">
 													<div class="col-6">
-														<label for="seq" class="form-label">seq</label>
-														<input type="text" id="seq" name="seq" class="form-control" th:value="${item.seq}">
+														<label for="codeGroupSeq" class="form-label">seq</label>
+														<input type="text" id="codeGroupSeq" name="codeGroupSeq" class="form-control" th:value="${item.codeGroupSeq}">
 													</div>
 													<div class="col-6">
-														<label for="name" class="form-label">코드이름</label>
-														<input type="text" id="name" name="name" class="form-control" th:value="${item.name}">
+														<label for="codeGroupName" class="form-label">코드이름</label>
+														<input type="text" id="codeGroupName" name="codeGroupName" class="form-control" th:value="${item.codeGroupName}">
 														<div class="invalid-feedback">
 													  			코드이름을 입력하세요
 													  	</div>
@@ -550,8 +550,8 @@
 											</div>
 											<div class="row mt-3">
 													<div class="col-6">
-														<label class="form-label">메모</label>
-														<input type="text" name="memo" class="form-control" th:value="${item.memo}">
+														<label for="codeGroupMemo" class="form-label">메모</label>
+														<input type="text" id="codeGroupMemo" name="codeGroupMemo" class="form-control" th:value="${item.codeGroupMemo}">
 													</div>
 											</div>
 											
@@ -606,9 +606,9 @@
 	}
 	
 	function validationUpdt(){
-		if(!nullToEmpty(document.getElementById("name").value)) {
+		if(!nullToEmpty(document.getElementById("codeGroupName").value)) {
 			
-			document.getElementById("name").setAttribute("class", "form-control is-invalid");
+			document.getElementById("codeGroupName").setAttribute("class", "form-control is-invalid");
 			return false;
 			
 		}
