--- a/coffee/src/main/resources/templates/xdm/infra/MemberXdmList.html
+++ b/coffee/src/main/resources/templates/xdm/infra/MemberXdmList.html
@@ -364,10 +364,10 @@
 										<label class="form-check-label" for="flexCheckChecked"></label>
 									</td>
 									<!--seq number -->
-									<td th:text="${list.seq}"></td>
-									<td th:if="${list.delNy eq 0}">N</td>
-									<td th:unless="${list.delNy eq 0}">Y</td>
-									<td><a th:href="@{/MemberXdmForm(seq=${list.seq})}"
+									<td th:text="${list.memberSeq}"></td>
+									<td th:if="${list.memberDelNy eq 0}">N</td>
+									<td th:unless="${list.memberDelNy eq 0}">Y</td>
+									<td><a th:href="@{/MemberXdmForm(memberSeq=${list.memberSeq})}"
 										th:text="${list.memberName}"></a></td>				
 									<!-- 등록일 수정일 -->
 <!--									<td th:text="${list.genderCd}"></td>-->
@@ -378,8 +378,8 @@
 									<td th:text="${list.memberEmail}"></td>
 									<td th:text="${list.birthDay}"></td>
 									<td th:text="${list.phoneNumber}"></td>
-									<td th:text="${#dates.format(list.regDatetime, 'yyyy-MM-dd HH:mm:ss')}"></td>
-									<td th:text="${#dates.format(list.modDatetime, 'yyyy-MM-dd HH:mm:ss')}"></td>
+									<td th:text="${#dates.format(list.memberRegDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+									<td th:text="${#dates.format(list.memberModDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
 
 								</tr>
 
