--- a/coffee/src/main/resources/templates/xdm/infra/ProductXdmForm.html
+++ b/coffee/src/main/resources/templates/xdm/infra/ProductXdmForm.html
@@ -529,13 +529,6 @@
 
 							<!-- 컨테이너 시작 -->
 							<form method="post">
-							<div class="container-fluid">
-								<div class="row">
-									<div class="col mb-3">
-										<div class="card-title">제품 관리</div>
-									</div>
-								</div>
-								
 											<div class="container-fluid">
 									<div class="row">
 										<div class="col mb-3">
@@ -605,6 +598,12 @@
 											<div class="invalid-feedback">
 										  			제품사이즈를 입력하세요
 										  	</div>
+										</div>
+									</div>
+									<div class="row mt-4">
+										<div class="col-6">
+											<label for="productSeq" class="form-label">제품 seq</label>
+											<input type="text" id="productSeq" name="productSeq" class="form-control" th:value="${item.productSeq}">
 										</div>
 									</div>
 											<div class="d-flex justify-content-between mt-4">
